--- a/dyniva_backoffice.info.yml
+++ b/dyniva_backoffice.info.yml
@@ -1,7 +1,7 @@
 name: 'Dyniva Backoffice'
 description: 'manage config to use dyniva_admin theme'
 type: module
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 dependencies:
   - switch_page_theme
   - toolbar_menu
