--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     "license": "GPL-2.0-or-later",
     "homepage": "https://github.com/davyin-co/dyniva_backoffice",
     "require": {
-        "drupal/core": "^8.6 || ^9"
+        "drupal/core": "^8.6 || ^9",
+        "davyin/dyniva_admin": "2.x-dev",
+        "drupal/toolbar_menu": "^2.2",
+        "drupal/theme_switcher": "^1.1"
     }
 }
