--- a/dyniva_backoffice.info.yml
+++ b/dyniva_backoffice.info.yml
@@ -3,5 +3,5 @@ description: 'manage config to use dyniva_admin theme'
 type: module
 core_version_requirement: ^8.8 || ^9
 dependencies:
-  - switch_page_theme
+  - theme_switcher
   - toolbar_menu
