--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,6 @@
         "drupal/core": "^8.6 || ^9",
         "davyin/dyniva_admin": "1.x-dev",
         "drupal/toolbar_menu": "^2.2",
-        "drupal/theme_switcher": "^1.1"
+        "drupal/theme_switcher": "1.x-dev"
     }
 }
