--- a/dyniva_backoffice.routing.yml
+++ b/dyniva_backoffice.routing.yml
@@ -5,13 +5,7 @@ manage.admin:
     _title: 'Manage'
   requirements:
     _permission: 'access administration pages'
-manage.dashboard:
-  path: '/manage/dashboard'
-  defaults:
-    _controller: '\Drupal\dyniva_backoffice\Controller\ManageDashboard::Overview'
-    _title: 'Media'
-  requirements:
-    _permission: 'access administration pages'
+
 manage.content:
   path: '/manage/content'
   defaults:
@@ -19,25 +13,19 @@ manage.content:
     _title: 'Content'
   requirements:
     _permission: 'access administration pages'
+manage.dashboard:
+  path: '/manage/dashboard'
+  defaults:
+    _controller: '\Drupal\dyniva_backoffice\Controller\ManageDashboard::Overview'
+    _title: 'Media'
+  requirements:
+    _permission: 'access administration pages'
+
 manage.media:
   path: '/manage/media'
   defaults:
     _controller: '\Drupal\dyniva_backoffice\Controller\ManageMenuController::systemAdminMenuBlockPage'
     _title: 'Media'
-  requirements:
-    _permission: 'access administration pages'
-manage.menu:
-  path: '/manage/menu'
-  defaults:
-    _controller: '\Drupal\dyniva_backoffice\Controller\ManageMenuController::systemAdminMenuBlockPage'
-    _title: 'Menu'
-  requirements:
-    _permission: 'access administration pages'
-manage.site:
-  path: '/manage/site'
-  defaults:
-    _controller: '\Drupal\dyniva_backoffice\Controller\ManageMenuController::systemAdminMenuBlockPage'
-    _title: 'Site'
   requirements:
     _permission: 'access administration pages'
 manage.media_grid:
@@ -47,3 +35,34 @@ manage.media_grid:
     _title: 'Media'
   requirements:
     _permission: 'access administration pages'
+
+manage.menu:
+  path: '/manage/menu'
+  defaults:
+    _controller: '\Drupal\dyniva_backoffice\Controller\ManageMenuController::systemAdminMenuBlockPage'
+    _title: 'Menu'
+  requirements:
+    _permission: 'access administration pages'
+
+manage.site:
+  path: '/manage/site'
+  defaults:
+    _controller: '\Drupal\dyniva_backoffice\Controller\ManageMenuController::systemAdminMenuBlockPage'
+    _title: 'Site'
+  requirements:
+    _permission: 'access administration pages'
+manage.site_information:
+  path: '/manage/site/information'
+  defaults:
+    _form: 'Drupal\system\Form\SiteInformationForm'
+    _title: 'Site Basic Information'
+  requirements:
+    _permission: 'administer site configuration'
+manage.site_translation:
+  path: '/manage/site/translate'
+  defaults:
+    _controller: '\Drupal\locale\Controller\LocaleController::translatePage'
+    _title: 'User interface translation'
+  requirements:
+    _permission: 'translate interface'
+
