--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,17 @@
     "homepage": "https://github.com/davyin-co/dyniva_backoffice",
     "require": {
         "drupal/core": "^8.6 || ^9",
+        "cweagans/composer-patches": "^1.7",
         "davyin/dyniva_admin": "1.x-dev",
         "drupal/toolbar_menu": "^2.2",
         "drupal/total_control": "^3.0",
         "drupal/theme_switcher": "1.x-dev"
+    },
+    "extra": {
+        "patches": {
+             "drupal/page_manager": {
+                 "page_variant entity type does not exist when installing or enabling": "https://www.drupal.org/files/issues/2876880-page-varient-cache-2.patch"
+             },
+        }
     }
 }
