--- a/dyniva_backoffice.links.menu.yml
+++ b/dyniva_backoffice.links.menu.yml
@@ -1,14 +1,23 @@
-manage.admin:
-  title: Manage
-  description: 'Manage.'
-  route_name: manage.admin
-  weight: -1
+manage.front:
+  title: Front
+  description: 'Front Page'
+  route_name: <front>
+  weight: 0
   menu_name: manage
+  options:
+    attributes:
+      target: _blank
 manage.system_admin:
   title: Admin
   description: 'Admin.'
   route_name: system.admin
-  weight: 0
+  weight: 1
+  menu_name: manage
+manage.admin:
+  title: Manage
+  description: 'Manage.'
+  route_name: manage.admin
+  weight: 2
   menu_name: manage
 
 ## dashboard
