--- a/config/optional/views.view.manage_landing_page.yml
+++ b/config/optional/views.view.manage_landing_page.yml
@@ -1,15 +1,15 @@
-uuid: a34b026e-6354-4618-a9c9-d5214c54e6fa
+uuid: c42c1aeb-d60f-4987-b1ca-4c99210f3750
 langcode: en
 status: true
 dependencies:
   config:
-    - node.type.article
+    - node.type.landing_page
   module:
     - node
     - user
     - views_add_button
-id: manage_content
-label: 'Manage Content'
+id: manage_landing_page
+label: 'Manage Landing Page'
 module: views
 description: ''
 tag: ''
@@ -25,7 +25,7 @@ display:
       access:
         type: perm
         options:
-          perm: 'edit any article content'
+          perm: 'edit any code_of_conduct content'
       cache:
         type: tag
         options: {  }
@@ -251,6 +251,73 @@ display:
           entity_type: node
           entity_field: uid
           plugin_id: field
+        created:
+          id: created
+          table: node_field_data
+          field: created
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Created
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: timestamp
+          settings:
+            date_format: custom
+            custom_date_format: 'Y-m-d H:i:s'
+            timezone: ''
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: node
+          entity_field: created
+          plugin_id: field
         changed:
           id: changed
           table: node_field_data
@@ -456,6 +523,21 @@ display:
               edit_own_editor: '0'
               edit_menu: '0'
               administrator: '0'
+              workbench_base: '0'
+              workbench_author: '0'
+              workbench_moderator: '0'
+              workbench_publisher: '0'
+              workbench_access_supplier_en: '0'
+              workbench_access_supplier_cn: '0'
+              workbench_access_german: '0'
+              workbench_access_chinese: '0'
+              workbench_access_english: '0'
+              workbench_access_page_de: '0'
+              workbench_access_page_en: '0'
+              workbench_access_page_cn: '0'
+              workbench_access_press_de: '0'
+              workbench_access_press_en: '0'
+              workbench_access_press_cn: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -547,17 +629,7 @@ display:
           granularity: second
       title: 'Landing Pages'
       header: {  }
-      footer:
-        result:
-          id: result
-          table: views
-          field: result
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: false
-          content: '@start - @end / @total'
-          plugin_id: result
+      footer: {  }
       empty:
         area:
           id: area
@@ -569,7 +641,7 @@ display:
           empty: true
           tokenize: false
           content:
-            value: 'No Data Found.'
+            value: 'No Items founded.'
             format: full_html
           plugin_id: text
       relationships: {  }
@@ -585,137 +657,28 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
-  article:
+  list:
     display_plugin: page
-    id: article
-    display_title: 'Article'
+    id: list
+    display_title: 'Landing Pages'
     position: 1
     display_options:
       display_extenders: {  }
-      path: manage/article
+      path: manage/landing-pages
       display_description: ''
-      title: Article
-      defaults:
-        title: false
-        filters: false
-        filter_groups: false
-        access: false
-        header: false
-      filters:
-        status:
-          value: '1'
-          table: node_field_data
-          field: status
-          plugin_id: boolean
-          entity_type: node
-          entity_field: status
-          id: status
-          expose:
-            operator: ''
-            operator_limit_selection: false
-            operator_list: {  }
-          group: 1
-        type:
-          id: type
-          table: node_field_data
-          field: type
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: in
-          value:
-            article: article
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-            argument: null
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: node
-          entity_field: type
-          plugin_id: bundle
-        title:
-          id: title
-          table: node_field_data
-          field: title
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: contains
-          value: ''
-          group: 1
-          exposed: true
-          expose:
-            operator_id: title_op
-            label: Title
-            description: ''
-            use_operator: false
-            operator: title_op
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: title
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              editor: '0'
-              edit_own_editor: '0'
-              edit_menu: '0'
-              administrator: '0'
-            placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: node
-          entity_field: title
-          plugin_id: string
-      filter_groups:
-        operator: AND
-        groups:
-          1: AND
       access:
         type: perm
         options:
-          perm: 'create article content'
+          perm: 'create landing_page content'
+      defaults:
+        access: false
+        header: false
       menu:
         type: none
+        title: 'Landing Pages'
         description: ''
         expanded: false
+        parent: 'menu_link_content:6948a058-fccb-449e-a5e3-06ac20292274'
         weight: 0
         context: '0'
         menu_name: manage
@@ -727,13 +690,13 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          empty: true
+          empty: false
           tokenize: 0
-          type: node+article
+          type: node+landing_page
           render_plugin: views_add_button_node
           access_plugin: views_add_button_node
           context: ''
-          button_text: 'Add Article'
+          button_text: 'Add Landing Page'
           button_classes: ''
           button_attributes: ''
           button_access_denied:
