--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "davyin/dyniva_admin": "1.x-dev",
         "drupal/toolbar_menu": "^2.2",
         "drupal/total_control": "^3.0",
+        "drupal/menu_trail_by_path": "^1.3",
         "drupal/theme_switcher": "1.x-dev"
     },
     "extra": {
